# NotionRecorder

Release-Rust/: Development-README.md
Release-Rust/src/: main.rs
Rust/: .env  Cargo.toml
Rust/src/: main.rs  model.rs
TypeScript/: README.md  RecNote.ts  RecNotion.bash  bun.lockb  index.js  index.ts  package.json
