[package]
name = "reseme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  {version = "4.5.13",features = ["derive"]}
console = "0.15.8"
envy = "0.4.2"
notion = "0.5.1"
serde = {version = "1.0.204",features = ["derive"]}
tokio = "1.39.2"
