[package]
name = "reseme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.38",features = ["serde"]}
clap =  {version = "4.5.13",features = ["derive"]}
console = "0.15.8"
dotenvy = "0.15.7"
envy = "0.4.2"
# notion = "0.5.1"
reqwest = "0.12.5"
serde = {version = "1.0.204",features = ["derive"]}
serde_json = "1.0.125"
tokio = {version = "1.39.2",features = ["full"]}
uuid = { version = "1.10.0",features = ["v4","fast-rng","macro-diagnostics"]}

[profile.release]
opt-level = 3